<resources>
    <string name="app_name">BookOfRecipes</string>
    <string name="add_recipe_text">Add recipe</string>
    <string name="edit_recipe_text">Edit recipe</string>
    <string name="add_recipe_button">Create recipe</string>
    <string name="edit_recipe_button">Edit recipe</string>
    <string name="new_recipe_title">Title</string>
    <string name="add_step_title">Add step</string>
    <string name="add_ingredient_title">Add ingredient</string>
    <string name="add_recipe_steps_title">Steps</string>
    <string name="add_recipe_ingredients_title">Ingredients</string>
    <string name="step_description">Description</string>
    <string name="ingredient_name">Name</string>
    <string name="ingredient_count">Count</string>
    <string name="ingredient_needs">Ingredient needs</string>
    <string name="title_step">Current step</string>
    <string name="go_to_cook">Go to cook!</string>
    <string name="next_step">Next</string>
    <string name="previous_step">Previous</string>
    <string name="filter_ingredients_title">Choose ingredients</string>
    <string name="filter_ingredients_button">Filter</string>

<!--ERRORS-->
    <string name="error_unque_title">Title exist</string>
    <string name="error_empty_title">Fill title</string>
    <string name="error_empty_steps">Steps must be 2+</string>
    <string name="error_empty_ingredients">Ingredients must be 1+</string>

</resources>